fix: employee update p2

--- a/src/main/resources/templates/modify-employee.html
+++ b/src/main/resources/templates/modify-employee.html
@@ -7,17 +7,25 @@
 </head>
 <body>
 <h2>Add Employee</h2>
+
 <form th:action="@{/modifyEmployee}" method="post" enctype="multipart/form-data">
+    <th:block th:if="${photoString.length()>0}">
+        <img th:src="'data:image/png;base64,' + ${photoString}" alt="Photo"> <br>
+    </th:block>
+    <th:block th:unless="${photoString.length()>0}"> <br>
+        <h4>Aucun Image</h4>
+    </th:block>
+    <p th:txt=""></p>
     <input type="hidden" name="employeeId" th:value="*{employeeId}">
     <input type="hidden" name="id" th:value="*{employeeId}">
     <input type="hidden" name="photoString" th:value="*{photoString}">
     <input type="hidden" name="regNo" th:value="*{regNo}">
     <label for="firstName">First Name:</label>
-    <input type="text" th:value="${firstName}" id="firstName" name="firstName"/>
+    <input type="text" th:value="${firstName}" id="firstName" name="firstName"/> <br>
     <label for="lastName">Last Name:</label>
-    <input type="text" th:value="${lastName}" id="lastName" name="lastName"/>
+    <input type="text" th:value="${lastName}" id="lastName" name="lastName"/> <br>
     <label for="birthDate">Birth date:</label>
-    <input type="date" th:value="${birthDate}" id="birthDate" name="birthDate"/>
+    <input type="date" th:value="${birthDate}" id="birthDate" name="birthDate"/> <br>
 
     <label for="photo">Photo:</label>
     <input type="file" id="photo" accept="image/*" name="photo"><br>
@@ -29,7 +37,6 @@
     </th:block>
 </form>
 
-<span th:text="${employeeId}"></span>
 
     </tbody>
 </table>
