--- a/src/main/resources/templates/employee_details.html
+++ b/src/main/resources/templates/employee_details.html
@@ -6,7 +6,12 @@
 </head>
 <body>
     <h2>Employee details</h2>
-    <img th:src="'data:image/png;base64,' + ${employee.photo}" alt="Aucune image">
+    <th:block th:if="${employee.photo.length()>0}">
+        <img th:src="'data:image/png;base64,' + ${employee.photo}" alt="Photo">
+    </th:block>
+    <th:block th:unless="${employee.photo.length()>0}">
+        <h4>Aucun Image</h4>
+    </th:block>
     <p>First Name: <span th:text="${employee.firstName}"></span></p>
     <p>Last Name: <span th:text="${employee.lastName}"></span></p>
     <p>Birth Date: <span th:text="${employee.birthDate}"></span></p>
