--- a/src/main/resources/templates/add-employee.html
+++ b/src/main/resources/templates/add-employee.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset = "ISO-8859-1" />
-    <link href = "css/styles.css" rel = "stylesheet"/>
+    <link href = "css/form.css" rel = "stylesheet"/>
     <title>Employee Management</title>
 </head>
 <body>
@@ -26,10 +26,6 @@
         <button type="submit">Add</button>
     </th:block>
 </form>
-
-<span th:text="${newEmployee.id}"></span>
-<span th:text="${newEmployee.registrationNo}"></span>
-<span th:text="${newEmployee.photo}"></span>
 
 
     </tbody>
