--- a/src/main/resources/templates/modify-employee.html
+++ b/src/main/resources/templates/modify-employee.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset = "ISO-8859-1" />
-    <link href = "css/styles.css" rel = "stylesheet"/>
+    <link href = "css/form.css" rel = "stylesheet"/>
     <title>Employee Management</title>
 </head>
 <body>
@@ -15,7 +15,6 @@
     <th:block th:unless="${photoString.length()>0}"> <br>
         <h4>Aucun Image</h4>
     </th:block>
-    <p th:txt=""></p>
     <input type="hidden" name="employeeId" th:value="*{employeeId}">
     <input type="hidden" name="id" th:value="*{employeeId}">
     <input type="hidden" name="photoString" th:value="*{photoString}">
