refactor:  url & action

--- a/src/main/resources/templates/add-employee.html
+++ b/src/main/resources/templates/add-employee.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h2>Add Employee</h2>
-<form th:action="@{/submitEmployee}" th:object="${newEmployee}" method="post" enctype="multipart/form-data">
+<form th:action="@{/addEmployee}" th:object="${newEmployee}" method="post" enctype="multipart/form-data">
     <label for="photo">Photo:</label>
     <input type="file" id="photo" accept="image/*" th:field="*{photo}"><br>
 
