--- a/src/main/resources/templates/modify-employee.html
+++ b/src/main/resources/templates/modify-employee.html
@@ -6,7 +6,7 @@
     <title>Employee Management</title>
 </head>
 <body>
-<h2>Add Employee</h2>
+<h2>Update Employee</h2>
 
 <form th:action="@{/modifyEmployee}" method="post" enctype="multipart/form-data">
     <th:block th:if="${photoString.length()>0}">
