--- a/src/main/resources/templates/add-employee.html
+++ b/src/main/resources/templates/add-employee.html
@@ -2,76 +2,77 @@
 <html>
 <head>
     <meta charset = "ISO-8859-1" />
-    <link href = "css/form.css" rel = "stylesheet"/>
+    <link href = "css/styles.css" rel = "stylesheet"/>
     <title>Employee Management</title>
 </head>
 <body>
+<div th:replace="fragments/header :: header"></div>
 <h1>Create New Employee</h1>
-<form th:action="@{/addEmployee}" method="post" enctype="multipart/form-data">
-    <label>First Name:</label>
+<form th:action="@{/addEmployee}" method="post" enctype="multipart/form-data" class="employeeForm">
+    <label class="labelForm">First Name:</label>
     <input type="text" name="firstName" required /><br/>
 
-    <label>Last Name:</label>
+    <label class="labelForm">Last Name:</label>
     <input type="text" name="lastName" required /><br/>
 
-    <label>Birth Date:</label>
+    <label class="labelForm">Birth Date:</label>
     <input type="date" name="birthDate" /><br/>
 
-    <label>Photo:</label>
+    <label class="labelForm">Photo:</label>
     <input type="file" name="photo" /><br/>
 
-    <label>Gender:</label>
+    <label class="labelForm">Gender:</label>
     <select name="gender">
         <option th:each="gender: ${genders}"
                 th:value="${gender}" th:text="${gender}"></option>
     </select><br/>
 
 
-    <label>Number of Children:</label>
+    <label class="labelForm">Number of Children:</label>
     <input type="number" name="numberOfChildren" value="0" min="0"/><br/>
 
-    <label>Phones:</label>
+    <label class="labelForm">Phones:</label>
     <div id="phones">
     </div>
     <button type="button" onclick="addPhone()">Add Phone</button><br/>
 
-    <label>Address:</label>
+    <label class="labelForm">Address:</label>
     <input type="text" name="address" /><br/>
 
-    <label>Personal Email:</label>
+    <label class="labelForm">Personal Email:</label>
     <input type="email" name="personalEmail" /><br/>
 
-    <label>Professional Email:</label>
+    <label class="labelForm">Professional Email:</label>
     <input type="email" name="professionalEmail" /><br/>
 
-    <label>CIN Number:</label>
+    <label class="labelForm">CIN Number:</label>
     <input type="text" name="cinNumber" /><br/>
 
-    <label>CIN Issue Date:</label>
+    <label class="labelForm">CIN Issue Date:</label>
     <input type="date" name="cinIssueDate" /><br/>
 
-    <label>CIN Issue Place:</label>
+    <label class="labelForm">CIN Issue Place:</label>
     <input type="text" name="cinIssuePlace" /><br/>
 
-    <label>Function:</label>
+    <label class="labelForm">Function:</label>
     <input type="text" name="function" /><br/>
 
-    <label>Hiring Date:</label>
+    <label class="labelForm">Hiring Date:</label>
     <input type="date" name="hiringDate" /><br/>
 
-    <label>Departure Date:</label>
+    <label class="labelForm">Departure Date:</label>
     <input type="date" name="departureDate" /><br/>
 
-    <label>Socio-Professional Category:</label>
+    <label class="labelForm">Socio-Professional Category:</label>
     <select name="socioProfessionalCategory">
         <option th:each="category : ${categories}"
                 th:value="${category}" th:text="${category}"></option>
     </select><br/>
 
-    <label>CNAPS Number:</label>
+    <label class="labelForm">CNAPS Number:</label>
     <input type="text" name="cnapsNumber" /><br/>
 
-    <input type="submit" value="Create" />
+    <input type="submit" value="Create" class="submitButton"/>
 </form>
 
 <script>
