--- a/src/main/resources/templates/modify-employee.html
+++ b/src/main/resources/templates/modify-employee.html
@@ -6,6 +6,7 @@
     <title>Employee Management</title>
 </head>
 <body>
+<div th:replace="fragments/header :: header"></div>
 <h2>Update Employee</h2>
 
 <form th:action="@{/modifyEmployee}" method="post" enctype="multipart/form-data">
@@ -25,6 +26,12 @@
     <input type="text" th:value="${lastName}" id="lastName" name="lastName"/> <br>
     <label for="birthDate">Birth date:</label>
     <input type="date" th:value="${birthDate}" id="birthDate" name="birthDate"/> <br>
+    <label>Gender:</label>
+    <select name="gender">
+        <option th:each="g: ${genders}"
+                th:selected="${g==gender}"
+                th:value="${g}" th:text="${g}"></option>
+    </select><br/>
 
     <label for="photo">Photo:</label>
     <input type="file" id="photo" accept="image/*" name="photo"><br>
