--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -56,7 +56,7 @@
     </tr>
     <tr th:each="employee : ${employees}">
         <td>
-            <th:block th:if="${employee.photo.length()>0}">
+            <th:block th:if="${ employee.photo!=null && employee.photo.length()>0}">
                 <img th:src="'data:image/png;base64,' + ${employee.photo}" width="100" height="100" alt="Photo">
             </th:block>
         </td>
