--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,33 +9,70 @@
 <div th:replace="fragments/header :: header"></div>
 <h1>Employee List</h1>
 <form action="#" th:action="@{/employees}" method="get">
+    <input type="number" name="page" hidden="hidden" id="page" th:value="${page}"/> <br>
+    <input type="number" name="page_size" hidden="hidden" id="page_size" th:value="${pageSize}"/> <br>
+    <input type="text" name="sort_by" hidden="hidden" id="sort_by" th:value="${sortField}"/> <br>
+    <input type="text" name="sort_order" hidden="hidden" id="sort_order" th:value="${sortOrder}"/> <br>
     <label>Search by Last Name:</label>
-    <input type="text" name="last_name" id="last_name"/> <br>
+    <input type="text" name="last_name" id="last_name" th:value="${lastName}"/> <br>
     <label>Search by First Name:</label>
-    <input type="text" name="first_name" id="first_name"><br>
+    <input type="text" name="first_name" id="first_name" th:value="${firstName}"><br>
     <label>Filter by Gender:</label>
-    <select >
+    <select id="gender" name="gender" th:value="${gender}">
         <option value="">All</option>
         <option th:each="genderOption : ${genderList}"
                 th:value="${genderOption}"
                 th:text="${genderOption == 'H' ? 'Male' : (genderOption == 'F' ? 'Female' : 'Unknown')}"></option>
     </select> <br>
 
-    <label>Search by Function:</label>
-    <input type="text" /> <br>
+    <label>Entrance between :</label>
+    <input type="date" name="entrance_after" id="entrance_after" th:value="${entrance_after}"/>
+    <input type="date" name="function_before" id="entrance_before" th:value="${entrance_before}"/> <br>
+
+    <label>Leave between :</label>
+    <input type="date" name="leave_after" id="leave_after" th:value="${leave_after}"/>
+    <input type="date" name="leave_before" id="leave_before" th:value="${leave_before}"/> <br>
+
     <button type="submit">Search</button>
 </form>
 
 <table class="employee-table">
     <tr>
         <th>Photo</th>
-        <th><a th:href="@{/employees(sort_by='firstName',sort_order=${sortField eq 'firstName' and sortOrder eq 'ASC' ? 'DESC' : 'ASC'})}"
+        <th><a th:href="@{/employees(sort_by='firstName',sort_order=${sortField eq 'firstName' and sortOrder eq 'ASC' ? 'DESC' : 'ASC'},
+        page=1, page_size=${pageSize}, last_name=${lastName},
+        first_name=${firstName},
+        function=${function},
+        gender=${gender},
+        entrance_before=${entrance_before},
+        entrance_after=${entrance_after},
+        leave_before=${leave_before},
+        leave_after=${leave_after}
+        )}"
                th:text="${sortField eq 'firstName' ? (sortOrder eq 'ASC' ? 'First Name ▲' : 'First Name ▼') : 'First Name'}"></a></th>
-        <th><a th:href="@{/employees(sort_by='lastName',sort_order=${sortField eq 'lastName' and sortOrder eq 'ASC' ? 'DESC' : 'ASC'})}"
+        <th><a th:href="@{/employees(sort_by='lastName',sort_order=${sortField eq 'lastName' and sortOrder eq 'ASC' ? 'DESC' : 'ASC'},
+        page=1, page_size=${pageSize}, last_name=${lastName},
+        first_name=${firstName},
+        function=${function},
+        gender=${gender},
+        entrance_before=${entrance_before},
+        entrance_after=${entrance_after},
+        leave_before=${leave_before},
+        leave_after=${leave_after}
+        )}"
                th:text="${sortField eq 'lastName' ? (sortOrder eq 'ASC' ? 'Last Name ▲' : 'Last Name ▼') : 'Last Name'}"></a></th>
         <th>Registration Number</th>
         <th>Birth Date</th>
-        <th><a th:href="@{/employees(sort_by='gender',sort_order=${sortField eq 'gender' and sortOrder eq 'ASC' ? 'DESC' : 'ASC'})}"
+        <th><a th:href="@{/employees(sort_by='gender',sort_order=${sortField eq 'gender' and sortOrder eq 'ASC' ? 'DESC' : 'ASC'},
+        page=1, page_size=${pageSize}, last_name=${lastName},
+        first_name=${firstName},
+        function=${function},
+        gender=${gender},
+        entrance_before=${entrance_before},
+        entrance_after=${entrance_after},
+        leave_before=${leave_before},
+        leave_after=${leave_after}
+        )}"
                th:text="${sortField eq 'gender' ? (sortOrder eq 'ASC' ? 'Gender ▲' : 'Gender ▼') : 'Gender'}"></a></th>
         <th>Phones</th>
         <th>Address</th>
@@ -44,7 +81,16 @@
         <th>CIN Number</th>
         <th>CIN Issue Date</th>
         <th>CIN Issue Place</th>
-        <th><a th:href="@{/employees(sort_by='function',sort_order=${sortField eq 'function' and sortOrder eq 'ASC' ? 'DESC' : 'ASC'})}"
+        <th><a th:href="@{/employees(sort_by='function',sort_order=${sortField eq 'function' and sortOrder eq 'ASC' ? 'DESC' : 'ASC'},
+        page=1, page_size=${pageSize}, last_name=${lastName},
+        first_name=${firstName},
+        function=${function},
+        gender=${gender},
+        entrance_before=${entrance_before},
+        entrance_after=${entrance_after},
+        leave_before=${leave_before},
+        leave_after=${leave_after}
+        )}"
                th:text="${sortField eq 'function' ? (sortOrder eq 'ASC' ? 'Function ▲' : 'Function ▼') : 'Function'}"></a></th>
         <th>Number of Children</th>
         <th>Hiring Date</th>
@@ -95,12 +141,35 @@
 <div class="pagination">
     <!-- First Page -->
     <span>
-        <a th:href="@{/employees(page=1, page_size=${page_size})}" th:if="${page > 1}">First</a>
+        <a th:href="@{/employees
+        (page=1, page_size=${pageSize},
+        sort_order=${sortOrder},
+        sort_by=${sortField},
+        last_name=${lastName},
+        first_name=${firstName},
+        function=${function},
+        gender=${gender},
+        entrance_before=${entrance_before},
+        entrance_after=${entrance_after},
+        leave_before=${leave_before},
+        leave_after=${leave_after}
+        )}" th:if="${page > 1}">First</a>
     </span>
     <!-- Previous Page -->
     <span>
-        <a th:href="@{/employees(page=${page - 1}, page_size=${page_size})}"
-           th:if="${page > 1}">Previous</a>
+        <a th:href="@{/employees(
+        page=${page - 1}, page_size=${pageSize},
+        sort_order=${sortOrder},
+        sort_by=${sortField},
+        last_name=${lastName},
+        first_name=${firstName},
+        function=${function},
+        gender=${gender},
+        entrance_before=${entrance_before},
+        entrance_after=${entrance_after},
+        leave_before=${leave_before},
+        leave_after=${leave_after}
+        )}" th:if="${page > 1}">Previous</a>
     </span>
 
     <!-- Current Page -->
@@ -110,12 +179,32 @@
 
     <!-- Next Page -->
     <span>
-        <a th:href="@{/employees(page=${page + 1}, page_size=${page_size})}"
+        <a th:href="@{/employees(page=${page + 1}, page_size=${pageSize},
+        sort_order=${sortOrder},
+        sort_by=${sortField},
+        last_name=${lastName},
+        first_name=${firstName},
+        function=${function},
+        gender=${gender},
+        entrance_before=${entrance_before},
+        entrance_after=${entrance_after},
+        leave_before=${leave_before},
+        leave_after=${leave_after})}"
            th:if="${page + 1 < totalPages}">Next</a>
     </span>
     <!-- Last Page -->
     <span>
-        <a th:href="@{/employees(page=${totalPages - 1}, page_size=${page_size})}"
+        <a th:href="@{/employees(page=${totalPages }, page_size=${pageSize},
+        sort_order=${sortOrder},
+        sort_by=${sortField},
+        last_name=${lastName},
+        first_name=${firstName},
+        function=${function},
+        gender=${gender},
+        entrance_before=${entrance_before},
+        entrance_after=${entrance_after},
+        leave_before=${leave_before},
+        leave_after=${leave_after})}"
            th:if="${page + 1 < totalPages}">Last</a>
     </span>
 
@@ -124,7 +213,7 @@
 
     <!-- Page Size Select Dropdown -->
     <label>Page Size:</label>
-    <select th:field="*{page_size}">
+    <select th:field="*{pageSize}">
         <option value="10">10</option>
         <option value="25">25</option>
         <option value="50">50</option>
