--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset = "UTF-8" />
-    <link href = "css/styles.css" rel = "stylesheet"/>
+    <link href = "/css/styles.css" rel = "stylesheet"/>
     <title>Employee Management</title>
 </head>
 <body>
@@ -27,7 +27,7 @@
 
     <label>Entrance between :</label>
     <input type="date" name="entrance_after" id="entrance_after" th:value="${entrance_after}"/>
-    <input type="date" name="function_before" id="entrance_before" th:value="${entrance_before}"/> <br>
+    <input type="date" name="entrance_before" id="entrance_before" th:value="${entrance_before}"/> <br>
 
     <label>Leave between :</label>
     <input type="date" name="leave_after" id="leave_after" th:value="${leave_after}"/>
