--- a/src/main/resources/templates/update-employee.html
+++ b/src/main/resources/templates/update-employee.html
@@ -1,10 +1,176 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8"/>
+  <link href="/css/styles.css" rel="stylesheet"/>
+  <title>Employee Management</title>
 </head>
 <body>
+<div th:replace="fragments/header :: header"></div>
+<h1>Modify Employee</h1>
+
+<form th:action="@{/modifyEmployee}" method="post" enctype="multipart/form-data" class="employeeForm">
+  <input type="hidden" name="id" th:value="${employee.id}" />
+  <input type="hidden" name="photoString" th:value="${employee.photo}">
+  <img id="currentImage" th:src="'data:image/png;base64,' + ${employee.photo}" alt="Photo" th:if="${employee.photo!=null && employee.photo.length()>0}" width="300" /><br/>
+  <img id="selectedImage" src="#" alt="Selected Image" width="300"  style="display: none;" /><br/>
+
+  <label class="labelForm">First Name:</label>
+  <input type="text" name="firstName" th:value="${employee.firstName}" required /><br/>
+
+  <label class="labelForm">Last Name:</label>
+  <input type="text" name="lastName" th:value="${employee.lastName}" required /><br/>
+
+  <label class="labelForm">Birth Date:</label>
+  <input type="date" name="birthDate" th:value="${employee.birthDate}" /><br/>
+
+  <label class="labelForm">Photo:</label>
+  <input type="file" name="photo" id="photoInput" onchange="showSelectedImage(event)" /><br/>
+
+
+  <label class="labelForm">Gender:</label>
+  <select name="gender">
+    <option th:each="gender: ${genders}"
+            th:value="${gender}" th:text="${gender}" th:selected="${gender == employee.gender}"></option>
+  </select><br/>
+
+  <label class="labelForm">Number of Children:</label>
+  <input type="number" name="numberOfChildren" th:value="${employee.numberOfChildren}" min="0"/><br/>
+
+  <label class="labelForm">Phones:</label>
+  <div id="phones">
+    <p th:each="phone : ${employee.phones}" th:text="${phone}"></p>
+  </div>
+  <button type="button" onclick="addPhone()">Add Phone</button><br/>
+
+  <label class="labelForm">Address:</label>
+  <input type="text" name="address" th:value="${employee.address}" /><br/>
+
+  <label class="labelForm">Personal Email:</label>
+  <input type="email" name="personalEmail" th:value="${employee.personalEmail}" /><br/>
+
+  <label class="labelForm">Professional Email:</label>
+  <input type="email" name="professionalEmail" th:value="${employee.professionalEmail}" /><br/>
+
+  <label class="labelForm">CIN Number:</label>
+  <input type="text" name="cinNumber" th:value="${employee.cinNumber}" /><br/>
+
+  <label class="labelForm">CIN Issue Date:</label>
+  <input type="date" name="cinIssueDate" th:value="${employee.cinIssueDate}" /><br/>
+
+  <label class="labelForm">CIN Issue Place:</label>
+  <input type="text" name="cinIssuePlace" th:value="${employee.cinIssuePlace}" /><br/>
+
+  <label class="labelForm">Function:</label>
+  <input type="text" name="function" th:value="${employee.function}" /><br/>
+
+  <label class="labelForm">Hiring Date:</label>
+  <input type="date" name="hiringDate" th:value="${employee.hiringDate}" /><br/>
+
+  <label class="labelForm">Departure Date:</label>
+  <input type="date" name="departureDate" th:value="${employee.departureDate}" /><br/>
+
+  <label class="labelForm">Socio-Professional Category:</label>
+  <select name="socioProfessionalCategory">
+    <option th:each="category : ${categories}"
+            th:value="${category}" th:text="${category}" th:selected="${category == employee.socioProfessionalCategory}"></option>
+  </select><br/>
+
+  <label class="labelForm">CNAPS Number:</label>
+  <input type="text" name="cnapsNumber" th:value="${employee.cnapsNumber}" /><br/>
+
+  <input type="submit" value="Save" class="submitButton" />
+</form>
+
+<script>
+  function addPhoneInput(phoneValue) {
+    const phoneInput = document.createElement("input");
+    phoneInput.type = "text";
+    phoneInput.name = "phones";
+    phoneInput.value = phoneValue;
+    const phoneDiv = document.createElement("div");
+    phoneDiv.appendChild(phoneInput);
+
+    // Check if there is more than one phone input to decide whether to add the delete button
+    if (document.getElementsByName("phones").length > 0) {
+      const deleteButton = document.createElement("button");
+      deleteButton.type = "button";
+      deleteButton.innerHTML = "Delete";
+      deleteButton.onclick = function() {
+        deletePhone(phoneInput);
+      };
+      phoneDiv.appendChild(deleteButton);
+    }
+
+    phoneDiv.appendChild(document.createElement("br"));
+    const phonesDiv = document.getElementById("phones");
+    phonesDiv.appendChild(phoneDiv);
+  }
+
+  function addPhone() {
+    addPhoneInput("");
+  }
+
+  function deletePhone(phoneInput) {
+    const phonesDiv = document.getElementById("phones");
+    phonesDiv.removeChild(phoneInput.parentElement);
+  }
+
+  // On page load, set phones to be an empty list if no phone numbers are provided
+  window.onload = function() {
+    const phonesInput = document.getElementsByName("phones");
+    if (phonesInput.length === 0) {
+      addPhone();
+    } else {
+      for (let i = 0; i < phonesInput.length; i++) {
+        addPhoneInput(phonesInput[i].value);
+      }
+    }
+  };
+
+  // Before form submission, update the actual input fields with the phone values
+  document.getElementById("employeeForm").addEventListener("submit", function() {
+    const phonesInput = document.getElementsByName("phones");
+    const phoneValues = [];
+    for (let i = 0; i < phonesInput.length; i++) {
+      phoneValues.push(phonesInput[i].value);
+    }
+    document.getElementById("phones").innerHTML = "";
+    for (let i = 0; i < phoneValues.length; i++) {
+      addPhoneInput(phoneValues[i]);
+    }
+  });
+
+  //display selected image
+  function showSelectedImage(event) {
+    const photoInput = event.target;
+    const currentImage = document.getElementById("currentImage");
+    const selectedImage = document.getElementById("selectedImage");
+    if (photoInput.files && photoInput.files[0]) {
+      const reader = new FileReader();
+      reader.onload = function (e) {
+        selectedImage.src = e.target.result;
+        selectedImage.style.display = "block";
+        currentImage.style.display = "none";
+      };
+      reader.readAsDataURL(photoInput.files[0]);
+    } else {
+      selectedImage.src = "#";
+      selectedImage.style.display = "none";
+      currentImage.style.display = "block";
+    }
+  }
+
+  // Function to show the current image initially when the page loads
+  function showCurrentImage() {
+    const currentImage = document.getElementById("currentImage");
+    currentImage.style.display = "block";
+  }
+
+  // Call the showCurrentImage function when the page loads
+  window.onload = showCurrentImage;
+
+</script>
 
 </body>
 </html>
